--- a/index.html
+++ b/index.html
@@ -164,13 +164,14 @@
                                 </a>
                             </div>
                             <div class="card flex-card">
-                                <a href="https://www.yodahegames.itch.io/" target="_blank" class="pointer">
+                                <a href="https://yodahegames.itch.io/" target="_blank" class="pointer">
                                     <i style="color: var(--white); font-size: calc(10 * var(--device-width) / 100); position: absolute; left: 50%; top: 50%;"
                                         class="fa-brands fa-itch-io"></i>
                                 </a>
                             </div>
                             <div class="card flex-card">
-                                <a href="https://www.yodahegames.itch.io/" target="_blank" class="pointer">
+                                <a href="https://drive.google.com/drive/folders/1SNPHyyL66EoS271nClMbBBKf73y0KRmd?usp=sharing"
+                                    target="_blank" class="pointer">
                                     <i style="color: var(--white); font-size: calc(10 * var(--device-width) / 100); position: absolute; left: 50%; top: 50%;"
                                         class="fa-solid fa-file"></i>
                                 </a>
